# warm

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ru.md  readme.md
.github/workflows/: ci.yml
files/: DLIST.lis  ELIST.lis  NLIST.lis  PRNSOL.lis
src/: cli.rs  main.rs  math.rs  visualize.rs
