[package]
name = "warm"
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
colorgrad = "0.7.1"
nalgebra = "0.33.2"

plotly = { version = "0.12" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.41"
russell_sparse = "1.9.0"
russell_lab = "1.9.0"
apdl-parser = "0.1.0"
# mimalloc = { version = "0.1.46", default-features = false }
